# jagua-rs

./: .gitignore  CITATION.cff  Cargo.toml  DEV.md  README.ORIGINAL.md  README.md  build-wasm.sh  crates.js  help.html  index.js  rust-toolchain.toml  search-index.js  serve.py  settings.html  src-files.js
jagua-rs/: Cargo.toml  README.md
jagua-rs-base/: Cargo.toml
jagua-rs-base/src/: lib.rs
jagua-rs-base/src/collision_detection/: cd_engine.rs
jagua-rs-base/src/collision_detection/hazards/: detector.rs  filter.rs  hazard.rs  mod.rs
jagua-rs-base/src/collision_detection/quadtree/: mod.rs  qt_hazard.rs  qt_node.rs
jagua-rs-base/src/entities/: bin.rs  container.rs  instance.rs  item.rs  layout.rs  mod.rs  original_shape.rs
jagua-rs-base/src/geometry/: convex_hull.rs  geo_traits.rs  mod.rs  original_shape.rs  shape_modification.rs
jagua-rs-base/src/geometry/fail_fast/: piers.rs  pole.rs  sp_surrogate.rs
jagua-rs-base/src/geometry/primitives/: circle.rs  edge.rs  rect.rs  simple_polygon.rs
jagua-rs-base/src/io/: export.rs  ext_repr.rs  import.rs  mod.rs
jagua-rs-base/src/io/svg/: layout_to_svg.rs  mod.rs  svg_util.rs
jagua-rs-base/src/util/: assertions.rs
jagua-rs-spp/: Cargo.toml
jagua-rs-spp/src/: lib.rs
jagua-rs-spp/src/entities/: instance.rs  mod.rs  problem.rs  solution.rs  strip.rs
jagua-rs-spp/src/io/: export.rs  ext_repr.rs  import.rs  mod.rs
jagua-rs-spp/src/util/: assertions.rs  mod.rs
jagua-rs/benches/: collision_benchmark.rs
jagua-rs/src/: lib.rs
jagua-rs/src/collision_detection/: cd_engine.rs  hazard.rs  hazard_filter.rs  hazard_helpers.rs  mod.rs
jagua-rs/src/collision_detection/hazards/: collector.rs  detector.rs  filter.rs  hazard.rs  mod.rs
jagua-rs/src/collision_detection/hpg/: boundary_fill.rs  circling_iterator.rs  grid.rs  grid_generator.rs  hazard_proximity_grid.rs  hpg_cell.rs  (+3 more)
jagua-rs/src/entities/: bin.rs  container.rs  instance.rs  item.rs  layout.rs  mod.rs  placed_item.rs  placement.rs  placing_option.rs  quality_zone.rs  solution.rs
jagua-rs/src/geometry/: convex_hull.rs  d_transformation.rs  geo_enums.rs  geo_traits.rs  mod.rs  original_shape.rs  shape_modification.rs  transformation.rs
jagua-rs/src/io/: export.rs  ext_repr.rs  import.rs  json_instance.rs  json_solution.rs  mod.rs  parse.rs  parser.rs
jagua-rs/src/probs/: mod.rs
jagua-rs/src/util/: assertions.rs  config.rs  f64a.rs  fpa.rs  mod.rs  polygon_modification.rs  polygon_simplification.rs
jagua-sqs-processor/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start-service.sh
jagua-sqs-processor/src/: lib.rs  main.rs  processor.rs
jagua-sqs-processor/tests/: e2e_test.rs
jagua-utils/: Cargo.toml
jagua-utils/src/: lib.rs  svg_nesting.rs
jagua-utils/src/svg_nesting/: mod.rs  parsing.rs  strategy.rs  svg_generation.rs
jagua-utils/tests/: svg_nesting_test.rs
jaguars/: Cargo.toml  README.md
jaguars/src/: lib.rs
jaguars/src/collision_detection/: cd_engine.rs  cde_snapshot.rs  collision.rs  hazard.rs  hazard_filter.rs  mod.rs
jaguars/src/entities/: bin.rs  insertion_option.rs  instance.rs  item.rs  layout.rs  mod.rs  placed_item.rs  placed_item_uid.rs  placing_option.rs  quality_zone.rs  solution.rs  stored_layout.rs
jaguars/src/fail_fast/: clips.rs  mod.rs  poi.rs
jaguars/src/geometry/: convex_hull.rs  d_transformation.rs  edge_iterator.rs  geo_enums.rs  geo_traits.rs  mod.rs  rotation.rs  transformation.rs
jaguars/src/insertion/: mod.rs
jaguars/src/io/: json_instance.rs  json_solution.rs  mod.rs  parser.rs
jaguars/src/parse/: mod.rs  parser.rs
jaguars/src/simplification/: corner.rs  mod.rs  poly_simplification.rs  polygon_converter.rs  simplification_config.rs
jaguars/src/util/: assertions.rs  config.rs  f64a.rs  fixed_layout_printer.rs  mod.rs  polygon_simplification.rs
lbf/: Cargo.toml  README.md  all.html  browser-index.js  constant.ITEM_LIMIT.html  index.html  index.js  serve.py  sidebar-items.js  static.EPOCH.html
lbf/.cargo/: config.toml
lbf/benches/: cde_bench.rs  ci_bench.rs  edge_sensitivity_bench.rs  fast_fail_bench.rs  hpg_bench.rs  quadtree_bench.rs  util.rs
lbf/config/: index.html  sidebar-items.js  struct.LBFConfig.html
lbf/io/: fn.init_logger.html  fn.read_bpp_instance.html  fn.read_spp_instance.html  fn.write_json.html  fn.write_svg.html  index.html  sidebar-items.js
lbf/io/cli/: enum.ProblemVariant.html  index.html  sidebar-items.js  struct.Cli.html
lbf/io/output/: index.html  sidebar-items.js  struct.BPOutput.html  struct.SPOutput.html
lbf/job/: job.json
lbf/opt/: index.html  sidebar-items.js
lbf/opt/lbf_bpp/: index.html  sidebar-items.js  struct.LBFOptimizerBP.html
lbf/opt/lbf_spp/: index.html  sidebar-items.js  struct.LBFOptimizerSP.html
lbf/opt/loss/: index.html  sidebar-items.js  struct.LBFLoss.html
lbf/opt/search/: fn.item_placement_order.html  fn.search.html  index.html  sidebar-items.js
lbf/samplers/: index.html  sidebar-items.js
lbf/samplers/ls_sampler/: constant.SD_ROT.html  constant.SD_TRANSL.html  index.html  sidebar-items.js  struct.LSSampler.html
lbf/samplers/rotation_distr/: enum.NormalRotDistr.html  enum.UniformRotDistr.html  index.html  sidebar-items.js  trait.RotationSampler.html
lbf/samplers/uniform_rect_sampler/: index.html  sidebar-items.js  struct.UniformRectSampler.html
lbf/src/: config.rs  lbf_config.rs  lbf_cost.rs  lbf_optimizer.rs  lib.rs  main.rs  time.rs  wasm.rs
lbf/src/io/: cli.rs  json_output.rs  layout_to_svg.rs  layout_to_svg_2.rs  mod.rs  output.rs  svg_data_export.rs  svg_export.rs  svg_util.rs
lbf/src/opt/: lbf_bpp.rs  lbf_opt_bpp.rs  lbf_opt_spp.rs  lbf_spp.rs  loss.rs  mod.rs  search.rs
lbf/src/samplers/: hpg_sampler.rs  ls_sampler.rs  mod.rs  rotation_distr.rs  uniform_rect_sampler.rs
lbf/src/util/: assertions.rs  mod.rs  wasm_demo.rs
lbf/tests/: tests.rs
lbf/util/: index.html
lbf/util/assertions/: fn.strip_width_is_in_check.html  index.html  sidebar-items.js
lbf/wasm/: README.md  build-wasm.sh  index.html
lbf/wasm-demo/: DEV.md  README.md  build-lbf-wasm.sh  index.html  index.js  serve.py
(+12077 files in other folders)
