[workspace]
resolver = "2"
members = ["jagua-rs", "lbf"]

[workspace.dependencies]
ndarray = "0.16"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
ordered-float = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
itertools = "0.14"
tribool = "0.3"
rayon = "1.10"
slotmap = "1.0"
float-cmp = "0.10"
svg = "0.18"
anyhow = "1.0"
fern = "0.7"
clap = { version = "4.5", features = ["derive"] }
test-case = "3.3"
thousands = "0.2.0"
jiff = "0.2"
criterion = "0.5"
document-features = "0.2"

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true
