[workspace]
resolver = "2"
members = ["jagua-rs", "lbf"]

[workspace.dependencies]
ndarray = "0.16"
rand = { version = "0.9", features = ["small_rng"] }
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
rand_distr = "0.5"
ordered-float = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
itertools = "0.14"
rayon = "1.10"
slotmap = "1.0"
float-cmp = "0.10"
svg = "0.18"
anyhow = "1.0"
fern = "0.7"
test-case = "3.3"
thousands = "0.2.0"
jiff = "0.2"
criterion = "0.6"
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde"] }
web-sys = { version = "0.3", features = ["Window", "Performance"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
document-features = "0.2"
console_error_panic_hook = "0.1"
geo-types = "0.7"
geo-buffer = "0.2"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 3
lto = "fat"
panic = "unwind"

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true