[package]
name = "jagua-rs-spp"
description = "Model of the Strip Packing Problem for jagua-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
homepage.workspace = true

[dependencies]
jagua-rs-base = { path = "../jagua-rs-base"}
serde = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }