[package]
name = "jagua-rs"
version = "0.5.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/JeroenGar/jagua-rs"
authors = ["Jeroen Gardeyn"]
description = "A fast and fearless Collision Detection Engine for 2D irregular Cutting and Packing problems"
readme = "../README.md"
keywords = ["nesting", "packing", "strip", "bin", "irregular"]
homepage = "https://github.com/JeroenGar/jagua-rs"

[dependencies]
ndarray = {workspace = true}
rand_distr = {workspace = true}
serde = {workspace = true}
ordered-float = { workspace = true }
log = {workspace = true}
tribool = {workspace = true}
slotmap = {workspace = true}
float-cmp = {workspace = true}
itertools = {workspace = true}
svg = {workspace = true}
anyhow = {workspace = true}
document-features = {workspace = true}
rayon = { workspace = true }
geo-offset = { version = "0.4.0", optional = true }
geo-types = { version = "0.7.16", optional = true }

[features]
default = ["separation-distance"]
## Enables support for defining a minimum separation distance between items and any hazard.
separation-distance = ["dep:geo-offset", "dep:geo-types"]
## Enables support for the Strip Packing Problem
spp = []
## Enables support for the Bin Packing Problem
bpp = []