[package]
name = "jagua-rs"
version = "0.6.3"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/JeroenGar/jagua-rs"
authors = ["Jeroen Gardeyn"]
description = "A fast and fearless Collision Detection Engine for 2D irregular Cutting and Packing problems"
readme = "../README.md"
keywords = ["nesting", "packing", "strip", "bin", "irregular"]
homepage = "https://github.com/JeroenGar/jagua-rs"

[dependencies]
ndarray = {workspace = true}
rand_distr = {workspace = true}
serde = {workspace = true}
ordered-float = { workspace = true }
log = {workspace = true}
slotmap = {workspace = true}
float-cmp = {workspace = true}
itertools = {workspace = true}
svg = {workspace = true}
anyhow = {workspace = true}
document-features = {workspace = true}
rayon = { workspace = true }
geo-types = { workspace = true }
geo-buffer = { workspace = true }

[features]
## Enables support for the Strip Packing Problem
spp = []
## Enables support for the Bin Packing Problem
bpp = []
simd = []

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
iai-callgrind = "0.15.2"

[package.metadata.docs.rs]
all-features = true
# rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "collision_benchmark"
harness = false
