[package]
name = "jaguars"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.4"
svg = "0.14.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.3"
dxf = "0.5.0"
num-integer = "0.1.44"
almost = "0.2.0"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.8"
ordered-float = "4.2.0"
indexmap = "2.1.0"
once_cell = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
dyn-clone = "1.0.9"
unzip-n = "0.1"
scoped_threadpool = "0.1"
itertools = "0.12.0"
human_format = "1.0.3"
fxhash = "0.2.1"
derivative = "2.2.0"
enum_dispatch = "0.3.11"
fern = "0.6.2"
humantime = "2.1.0"
generational-arena = "0.2.9"
smallvec = "1.11.2"
mimalloc = "0.1.39"
tribool = "0.3.0"