[package]
name = "jaguars"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
repository = "https://github.com/JeroenGar/jagua-rs"

[dependencies]
ndarray = "0.15.4"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.3"
num-integer = "0.1.44"
almost = "0.2.0"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.8"
ordered-float = "4.2.0"
indexmap = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
itertools = "0.12.0"
enum_dispatch = "0.3.11"
tribool = "0.3.0"