[package]
name = "lbf"
description = "Left Bottom Fill reference implementation for jagua-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
homepage.workspace = true

[dependencies]
jagua-rs = { path = "../jagua-rs", features = ["spp", "bpp"] }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
svg = { workspace = true }
jiff = { workspace = true }
clap = { workspace = true }
thousands = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
test-case = { workspace = true }
float-cmp = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "quadtree_bench"
harness = false

[[bench]]
name = "fast_fail_bench"
harness = false

#[[bench]]
#name = "edge_sensitivity_bench"
#harness = false

