[package]
name = "lbf"
version = "0.0.1"
description = "Left Bottom Fill reference implementation for jagua-rs"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/JeroenGar/jagua-rs"
authors = ["Jeroen Gardeyn"]
readme = "../README.md"
keywords = ["nesting", "packing", "strip", "bin", "irregular"]
homepage = "https://github.com/JeroenGar/jagua-rs"

[dependencies]
jagua-rs = { path = "../jagua-rs", features = ["bpp"] }
rand = { workspace = true }
getrandom = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
svg = { workspace = true }
jiff = { workspace = true }
thousands = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
test-case = { workspace = true }
float-cmp = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-rayon = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "quadtree_bench"
harness = false

[[bench]]
name = "fast_fail_bench"
harness = false

[[bench]]
name = "ci_bench"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

#[[bench]]
#name = "edge_sensitivity_bench"
#harness = false

