[package]
name = "lbf"
version = "0.0.1"
description = "Left Bottom Fill reference implementation for jagua-rs"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/JeroenGar/jagua-rs"
authors = ["Jeroen Gardeyn"]
readme = "../README.md"
keywords = ["nesting", "packing", "strip", "bin", "irregular"]
homepage = "https://github.com/JeroenGar/jagua-rs"

[dependencies]
jagua-rs = { path = "../jagua-rs", features = ["spp", "bpp"] }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
svg = { workspace = true }
jiff = { workspace = true }
clap = { workspace = true }
thousands = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
test-case = { workspace = true }
float-cmp = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "quadtree_bench"
harness = false

[[bench]]
name = "fast_fail_bench"
harness = false

[[bench]]
name = "ci_bench"
harness = false

#[[bench]]
#name = "edge_sensitivity_bench"
#harness = false


[features]
simd = ["jagua-rs/simd"]
